# Blaster-Master-Remake

./: .cproject  .gitignore  .gitmodules  .project  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BlasterMasterRemake.sln  BlasterMasterRemake.vcxproj  BlasterMasterRemake.vcxproj.filters  Platformer.dev  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  animation.cpp  animation.h  cmake_install.cmake  enemy.cpp  enemy.h  enemylist.cpp  enemylist.h  imageOps.cpp  imageOps.h  main.cpp  mapArray.h  physics.cpp  physics.h  player.cpp  player.h  stdafx.h  tile.h
Sprites/: A3a.tga  Enemy.tga  SOPHIA - копия.tga  SOPHIA.tga  Victory.tga
assets/Sprites/: A3.tga  HealthBar.tga  Shot.tga
assets/maps/: Area3.tmx  Test1.tmx
assets/tilesets/: Factory.tsx
docs/: style_guide.md
src/: CMakeLists.txt  main.cpp  stdafx.h  typeAliases.h  wasmAppPage.html
src/engine/: Game.cpp  Game.h  IWorld.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  Room.cpp  Room.h  TileSet.cpp  TileSet.h  TileTraits.cpp  TileTraits.h  TileType.cpp  TileType.h  Timer.h  World.cpp  World.h  constants.h  mapArray.h
src/engine/World/: World.cpp  World.h
src/entities/: Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/entities/Enemy/: Enemy.cpp  Enemy.h
src/entities/Player/: Player.cpp  Player.h
src/graphics/: Animation.cpp  Animation.h  Sprite.cpp  Sprite.h  TextureFragment.cpp  TextureFragment.h  TextureKeeper.cpp  TextureKeeper.h  TextureResource.cpp  TextureResource.h  utils.cpp  utils.h
src/graphics/Animation/: Animation.cpp  Animation.h
src/ui/: FillBar.cpp  FillBar.h
src/utils/: Point.h  Rectangle.cpp  Rectangle.h  enemylist.cpp  enemylist.h
